# poker-ai

./: .gitignore  railway.json
.github/workflows/: ci.yml
ai/engine/: baseline.py  hand_strength.py
ai/engine/abstraction/: equity_calc.py
ai/engine/cfr/: info_set.py  mccfr.py  strategy.py  vanilla_cfr.py
ai/engine/tests/: test_baseline.py  test_cfr.py
ai/models/: registry.py
ai/training/: arena.py  elo.py  replay_buffer.py  self_play.py
ai/training/tests/: test_training.py
apps/api/: database.py  main.py  pyproject.toml  setup.cfg
apps/api/core/: auth.py  config.py
apps/api/routers/: auth.py  game.py  guide.py  health.py  rooms.py  ws.py
apps/api/services/: game_manager.py  hand_history.py  room_game_manager.py
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/auth/: page.tsx
apps/web/src/app/guide/: page.tsx
apps/web/src/app/play/: page.tsx
apps/web/src/app/rooms/: page.tsx
apps/web/src/app/rooms/[id]/: page.tsx
apps/web/src/components/guide/: HandSelector.tsx  PositionSelector.tsx
apps/web/src/components/table/: ActionPanel.tsx  Card.tsx  CommunityCards.tsx  PlayerSeat.tsx  PokerTable.tsx  PotDisplay.tsx  TurnTimer.tsx
apps/web/src/hooks/: useGameState.ts
apps/web/src/lib/: api.ts  auth.tsx  cards.ts  i18n.tsx  rooms.ts
apps/web/src/types/: game.ts
docker/: Dockerfile.api  docker-compose.yml
docs/: ai-engine.md  architecture.md  development-log.md  rules-wsop.md  texassolver-study.md
